# contpaqi

./: .gitignore  .mcp.json  CLAUDE.md  README.es.md  README.md  next_task_prompt.md  tasks.md
.taskmaster/: state.json
desktop-app/: .eslintrc.cjs  .npmrc  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: string-encryption.md
installer/: contpaqi-bridge.iss
log_files/: T001_ProjectSetup_Log.md  T002.1_ScriptsSetup_Log.md  T002.2_MexicanLocale_Log.md  T002.3_InvoiceTemplates_Log.md  T002.4_AdditionalTemplates_Log.md  T002.5_DataRandomization_Log.md  T002.6_BoundingBoxes_Log.md  T002.7_GroundTruth_Log.md  T002.8_DatasetGeneration_Log.md  T003.1_PrepareDatasets_Log.md  T003.2_TatrFormat_Log.md  T003.3_LayoutLmFormat_Log.md  T003.4_DatasetSplits_Log.md  T003.5_HuggingFaceValidation_Log.md  T004.1_DockerfileBase_Log.md  T004.2_SystemDependencies_Log.md  T004.3_RequirementsPinned_Log.md  T004.4_MultistageBuild_Log.md  T004.5_DockerCompose_Log.md  T004.6_ContainerBuild_Log.md  T005.1_OCRModule_Log.md  T005.2_TesseractWrapper_Log.md  T005.3_WordExtraction_Log.md  T005.4_SpanishCharacters_Log.md  T005_OCRLayer_Log.md  T006.1_TATRModule_Log.md  T006.2_ModelLoading_Log.md  T006.4_RowExtraction_Log.md  (+101 more)
mcp-container/: Dockerfile  Dockerfile.prod  Makefile  docker-compose.yml  pyarmor.json  pyproject.toml  requirements-dev.txt  requirements.txt
mcp-container/scripts/: obfuscate.py
mcp-container/src/: __init__.py  inference.py  main.py
mcp-container/src/models/: __init__.py  layoutlm.py  schemas.py  tatr.py  validators.py
mcp-container/src/utils/: __init__.py  ocr.py
mcp-container/tests/: test_inference.py
(+426 files in other folders)
